k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-frontend
  namespace: recipe-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recipe-frontend
  template:
    metadata:
      labels:
        app: recipe-frontend
    spec:
      containers:
      - name: recipe-frontend
        image: deepaktas267/frontend-final:v13
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
