k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-frontend-service
  namespace: recipe-app
spec:
  selector:
    app: recipe-frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80      
      targetPort: 80  
      nodePort: 30131
